contact form alignment fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -308,7 +308,7 @@ a.resume:hover{
  
 #contact-form {
   position: relative;
-  width: 500px;
+  width: 468px;
   margin: 50px auto 100px auto;
 }
 
